<resources>
    <string name="app_name">Final project</string>
    <string name="register">הרשמה</string>
    <string name="register_enter_name">הקלד שם פרטי ושם משפחה</string>
    <string name="register_enter_email">הקלד את כתובת האימייל שלך</string>
    <string name="register_enter_age">הקלד את גילך</string>
    <string name="enter_phoneNumber">הקלד את מספר הטלפון שלך</string>
    <string name="register_enter_password">הקלד את הסיסמא שלך</string>
    <string name="register_teacher">מורה</string>
    <string name="register_student">תלמיד/ה</string>
    <string name="login">התחברות</string>
    <string name="login_error">שגיאה בהתחברות</string>
    <string name="application_name">IL Learning</string>
    <string name="teacher_login">התחבר כמורה</string>
    <string name="student_login">התחבר כתלמיד</string>
    <string name="level_of_study">רמת לימוד</string>
    <string name="Elementary">יסודי</string>
    <string name="high_school">תיכון</string>
    <string name="academic">אקדמיה</string>
    <string name="subjects">מקצועות לימוד</string>
    <string name="Biology">ביולוגיה</string>
    <string name="Math">מתמטיקה</string>
    <string name="English">אנגלית</string>
    <string name="hebrew">עברית</string>
    <string name="computers">מחשבים</string>
    <string name="geography">גאוגרפיה</string>
    <string name="Literature">ספרות</string>
    <string name="Science">מדעים</string>
    <string name="eMath">חשבון</string>
    <string name="engineering">הנדסה</string>
    <string name="statistics">סטטיסטיקה</string>
    <string name="accounting">חשבונאות</string>
    <string name="Psychology">פסיכולוגיה</string>
    <string name="Finance">מימון פיננסי</string>
    <string name="java">ג\'אווה</string>
    <string name="title_activity_teacher">TeacherActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

</resources>