<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/main_layout_academic_title"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:background="@color/lightBlue"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/subjects"
            android:textSize="50sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/main_layout_academic_title"
        android:background="@drawable/start_activity_background"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/main_BTN_statistics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/lightBlue"
            android:text="@string/statistics"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/maim_BTN_accounting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/lightBlue"
            android:text="@string/accounting"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/main_BTN_psychology"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/lightBlue"
            android:text="@string/Psychology"
            android:textColor="@color/black" />


        <Button
            android:id="@+id/main_BTN_Finance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/lightBlue"
            android:text="@string/Finance"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/main_BTN_academic_english"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/lightBlue"
            android:text="@string/English"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/main_BTN_java"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/lightBlue"
            android:text="@string/java"
            android:textColor="@color/black" />
    </LinearLayout>

</RelativeLayout>