<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/main_layout_levelStudy"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:background="@color/lightBlue"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/level_of_study"
            android:textSize="50sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/main_layout_levelStudy"
        android:background="@drawable/start_activity_background"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/main_BTN_elementary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/lightBlue"
            android:text="@string/Elementary"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/maim_BTN_highSchool"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/lightBlue"
            android:text="@string/high_school"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/main_BTN_academic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/lightBlue"
            android:text="@string/academic"
            android:textColor="@color/black" />
    </LinearLayout>

</RelativeLayout>