<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <LinearLayout
        android:id="@+id/menu_layout_title"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:background="@color/lightBlue"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/application_name"
            android:textSize="50sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/menu_layout_title"
        android:background="@drawable/start_activity_background"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/menu_BTN_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/lightBlue"
            android:text="@string/register"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/menu_BTN_loginTeacher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/lightBlue"
            android:text="@string/teacher_login"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/ment_BTN_loginStudent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/lightBlue"
            android:text="@string/student_login"
            android:textColor="@color/black" />
    </LinearLayout>

</RelativeLayout>